--- a/package.json
+++ b/package.json
@@ -56,6 +56,7 @@
     "firebase": "^8.2.4",
     "handlebars": "^4.7.6",
     "lodash.debounce": "^4.0.8",
+    "lodash.throttle": "^4.1.1",
     "toastr": "^2.1.4",
     "tui-pagination": "^3.4.0"
   }
